<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background2"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/toss"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="40dp"
        android:text="@string/toss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5"
        app:layout_constraintVertical_bias="0.142" />

    <Button
        android:id="@+id/Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toss"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/dice_image1"
        android:layout_width="71dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_of_the_dice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/winScore"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/dice_image2"
        android:layout_width="71dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/image_of_the_dice"
        app:layout_constraintStart_toEndOf="@id/dice_image1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice2" />

    <ImageView
        android:id="@+id/dice_image3"
        android:layout_width="71dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/image_of_the_dice"
        app:layout_constraintStart_toEndOf="@id/dice_image2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice3" />

    <ImageView
        android:id="@+id/dice_image4"
        android:layout_width="71dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="92dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/image_of_the_dice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dice_image1"
        app:srcCompat="@drawable/dice4" />

    <ImageView
        android:id="@+id/dice_image5"
        android:layout_width="71dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="232dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/image_of_the_dice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dice_image3"
        app:srcCompat="@drawable/dice5" />

    <ImageView
        android:id="@+id/dice_view1"
        android:layout_width="71dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:contentDescription="@string/image_of_the_dice"
        app:layout_constraintEnd_toStartOf="@+id/dice_view2"
        app:layout_constraintTop_toBottomOf="@+id/dice_image4"
        app:srcCompat="@drawable/pdice1" />


    <ImageView
        android:id="@+id/dice_view2"
        android:layout_width="71dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="88dp"
        android:contentDescription="@string/image_of_the_dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_image5"
        app:srcCompat="@drawable/pdice2" />

    <ImageView
        android:id="@+id/dice_view3"
        android:layout_width="71dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="112dp"
        android:contentDescription="@string/image_of_the_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dice_view4"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pdice3" />

    <ImageView
        android:id="@+id/dice_view4"
        android:layout_width="71dp"
        android:layout_height="90dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="108dp"
        android:contentDescription="@string/image_of_the_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dice_view5"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pdice4" />

    <ImageView
        android:id="@+id/dice_view5"
        android:layout_width="71dp"
        android:layout_height="90dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="108dp"
        android:contentDescription="@string/image_of_the_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pdice5" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/checkBox2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_view1" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_view2" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/checkBox4"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_view3" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toStartOf="@+id/checkBox5"
        app:layout_constraintTop_toBottomOf="@+id/dice_view4" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_view5" />

    <TextView
        android:id="@+id/scoreView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/score_0"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView

        android:id="@+id/winScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wins"
        android:textSize="16sp"
        android:background="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
